# atlas-re

./: .gitignore  .gitmodules  .stan.toml  CHANGELOG.md  README.md  atlas-re.cabal  atlas-revisited.cabal  cabal.project
app/: Cli.hs  Main.hs
artifact/: .gitignore  Dockerfile  README.md  cabal.project  full-test.sh  make-source.sh  smoke-test.sh  wrapper.sh  zip-it.sh
src/: Ast.hs  AstContext.hs  Benchmark.hs  Constants.hs  Eval.hs  Module.hs  Normalization.hs  Optimization.hs  Parser.hs  Primitive.hs  SourceError.hs  StaticAnalysis.hs  TypeInference.hs  Types.hs
src/CostAnalysis/: #RsrcAnn.hs#  #Weakening.hs#  .#RsrcAnn.hs  .#Weakening.hs  Analysis.hs  AnnIdxQuoter.hs  Annotation.hs  Coeff.hs  Comb.hs  Constraint.hs  Deriv.hs  Log.hs  Optimization.hs  Potential.hs  Predicate.hs  PrettyProof.hs  ProveMonad.hs  RsrcAnn.hs  RsrcAnn_.hs  Rules.hs  Solving.hs  Tactic.hs  Template.hs  Weakening.hs
src/CostAnalysis/Potential/: Common.hs  Kind.hs  Log.hs  Logarithm.hs  NLog.hs  Poly.hs  Rank.hs  RightHeavy.hs  SumOfLogs.hs  TreeSize.hs
src/CostAnalysis/Potential/Log/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/Logarithm/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/NLog/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/Poly/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/Rank/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/RightHeavy/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/SumOfLogs/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/CostAnalysis/Potential/TreeSize/: Base.hs  Constraints.hs  Optimization.hs  Weakening.hs
src/Parsing/: Program.hs  SmtLib.hs  Tactic.hs
src/Typing/: Inference.hs  Scheme.hs  Subst.hs  Type.hs
tactics/PairingHeap/: link.txt  merge_pairs.txt
tactics/Rand/: f.txt  flip.txt  h.txt
tactics/RandMeldableHeap/: meld.txt
tactics/RandSplayTree/: insert.txt  splay.txt
tactics/Scratch/: f5.txt  f6.txt  f7.txt  id_match_match.txt
tactics/SplayHeap/: delete_min.txt  insert.txt  partition.txt
tactics/SplayTree/: delete.txt  insert.txt  splay.txt  splay_max.txt
test/: EvalSpec.hs  NormalizationSpec.hs  TypeInferenceSpec.hs
test/CostAnalysis/: CoeffSpec.hs  LogSpec.hs  Potential.hs  PotentialSpec.hs  WeakeningSpec_.hs
test/CostAnalysis/Potential/Log/: BaseSpec.hs  ConstraintsSpec.hs  Helper.hs  WeakeningSpec.hs
test/CostAnalysis/Potential/NLog/: WeakeningSpec.hs
test/Parsing/: TacticSpec.hs
test/Typing/: InferenceSpec.hs
