cabal-version:      2.4
name:               atlas-re
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Automated Amortized Complexity Analysis

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Armin Walch
maintainer:         armin.walch@student.uibk.ac.at

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Ast,
                      Parsing.Program,
                      Parsing.Tactic,
                      Module,
                      Primitive,
                      Typing.Type,
                      Typing.Scheme,
                      Typing.Subst,
                      Typing.Inference,
                      AstContext,
                      CostAnalysis.Analysis,
                      CostAnalysis.Coeff,
                      CostAnalysis.Template,
                      CostAnalysis.Annotation,
                      CostAnalysis.Predicate,
                      CostAnalysis.Potential,
                      CostAnalysis.Deriv,
                      CostAnalysis.ProveMonad,
                      CostAnalysis.Tactic,
                      CostAnalysis.Rules,
                      CostAnalysis.AnnIdxQuoter,
                      CostAnalysis.Constraint,
                      CostAnalysis.Solving,
                      CostAnalysis.Weakening,
                      CostAnalysis.Potential.SumOfLogs,
                      CostAnalysis.Potential.SumOfLogs.Base,
                      CostAnalysis.Potential.SumOfLogs.Constraints,
                      CostAnalysis.Potential.SumOfLogs.Optimization,
                      CostAnalysis.Potential.SumOfLogs.Weakening,
                      CostAnalysis.Potential.Poly,
                      CostAnalysis.Potential.Poly.Base,
                      CostAnalysis.Potential.Poly.Constraints,
                      CostAnalysis.Potential.Poly.Optimization,
                      CostAnalysis.Potential.Poly.Weakening,
                      CostAnalysis.Potential.NLog,
                      CostAnalysis.Potential.NLog.Base,
                      CostAnalysis.Potential.NLog.Constraints,
                      CostAnalysis.Potential.NLog.Optimization,
                      CostAnalysis.Potential.NLog.Weakening,
                      CostAnalysis.Potential.Kind,
                      CostAnalysis.PrettyProof,
                      StaticAnalysis,
                      SourceError,
                      Normalization,
                      Eval,
                      Constants
                      
    
    -- Modules included in this library but not exported.
    -- other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.17.2.1,
                      containers,
                      template-haskell ^>= 2.19.0.0,
                      megaparsec,
                      text,
                      mtl,
                      parser-combinators,
                      filepath ^>= 1.5.2.0,
                      Glob ^>= 0.10.2,
                      extra ^>= 1.7.14,
                      array,
                      random ^>= 1.2.1,
                      microlens-platform ^>= 0.4.3,
                      random-fu ^>= 0.3,
                      vector ^>=  0.13.1.0,
                      z3 ^>= 411,
                      shakespeare ^>= 2.1.0.1,
                      blaze-html ^>= 0.9.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wunused-imports

executable atlas-re
    main-is:          Main.hs
    other-modules:    Cli,
                      Paths_atlas_re
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        atlas-re,
        text,
        directory ^>= 1.3.8.5,
        optparse-applicative ^>= 0.17.1.0,
        filepath ^>= 1.5.2.0,
        mtl ^>= 2.2.2,
        containers,
        random ^>= 1.2.1,
        co-log ^>= 0.6.1.0,
        ansi-terminal >=1.0
    hs-source-dirs: app
    -- profiling: True
    default-language: Haskell2010
    ghc-options: -O2 -Wunused-imports 

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        containers,
        atlas-re,
        hspec,
        random ^>= 1.2.1,
        text ^>= 2.0.2,
        vector ^>=  0.13.1.0,
        mtl ^>= 2.2.2
    hs-source-dirs: test
    other-modules:
        Typing.InferenceSpec,
        NormalizationSpec,
        EvalSpec,
        Parsing.TacticSpec,
        CostAnalysis.CoeffSpec,
        CostAnalysis.Potential.Log.Helper,
        CostAnalysis.PotentialSpec,
        CostAnalysis.Potential.Log.BaseSpec,
        CostAnalysis.Potential.Log.ConstraintsSpec,
        CostAnalysis.Potential.Log.WeakeningSpec
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover
 
