cabal-version:      2.4
name:               atlas-revisited
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Armin Walch
maintainer:         armin695@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Ast,
                      Parsing.Program,
                      Parsing.Tactic,
                      Module,
                      Primitive,
                      Typing.Type,
                      Typing.Scheme,
                      Typing.Subst,
                      Typing.Inference,
                      CostAnalysis.Deriv,
                      CostAnalysis.Tactic,
                      CostAnalysis.Rules,
                      CostAnalysis.Potential
                      CostAnalysis.Log,
                      StaticAnalysis,
                      SourceError,
                      Normalization,
                      Eval,
                      Constants
    
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.17.2.1,
                      containers,
                      megaparsec,
                      text,
                      mtl,
                      parser-combinators,
                      filepath ^>= 1.5.2.0,
                      Glob ^>= 0.10.2,
                      extra ^>= 1.7.14,
                      array,
                      random ^>= 1.2.1,
                      microlens-platform ^>= 0.4.3,
                      random-fu ^>= 0.3,
                      z3 ^>= 411
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wunused-imports

executable atlas-revisited
    main-is:          Main.hs
    other-modules:    Cli,
                      Paths_atlas_revisited
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        atlas-revisited,
        text,
        iris ^>= 0.1.0.0,
        optparse-applicative ^>= 0.17.1.0,
        filepath ^>= 1.5.2.0,
        mtl ^>= 2.2.2,
        containers,
        random ^>= 1.2.1
    hs-source-dirs: app
    --profiling: True
    default-language: Haskell2010
    ghc-options: -Wunused-imports

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        containers,
        hspec,
        atlas-revisited,
        random ^>= 1.2.1,
        text ^>= 2.0.2
    hs-source-dirs: test
    other-modules:
        Typing.InferenceSpec,
        NormalizationSpec,
        EvalSpec,
        Parsing.TacticSpec
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover
 
